--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,12 @@ edition = "2024"
 [dependencies]
 anyhow = "1.0.100"
 axum = "0.8.8"
+log = "0.4.29"
 rust7 = "0.1.2"
+serde = { version = "1.0.228", features = ["derive"] }
+serde_json = "1.0.148"
 tokio = { version = "1.48.0", features = ["full"] }
 tokio-modbus = "0.17.0"
 tokio-serial = "5.4.5"
+tracing = "0.1.44"
+tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
